test_suite/tests/ui/fail/invalid_attribute_key/invalid_subcommand_key.stderr
error: custom attribute panicked
 --> $DIR/invalid_subcommand_key.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: invalid `subcommand` key: `abc`
